--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -5,3 +5,16 @@
 [x-cloak] {
     display: none;
 }
+
+
+*::-webkit-scrollbar,
+*::-webkit-scrollbar-thumb {
+  width: 26px;
+  border-radius: 13px;
+  background-clip: padding-box;
+  border: 10px solid transparent;
+}
+
+*::-webkit-scrollbar-thumb {        
+  box-shadow: inset 0 0 0 10px;
+}
